SAK-14647 Split i18n sentence breaking L10n in Podcasts (French Canadian example)
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@76764 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
@@ -92,8 +92,7 @@ options_site=Mostrar a l'espai
 
 option_change_confirm=Els permisos del generador de Podcasts han canviat. Aquest generador ja no serà visible públicament. Per a que els no participants puguin accedir al generador de podcasts per aquest espai, feu clic a Opcions i escolliu el botó de grup corresponent a Mostrar als no membres (visible públicament).   
 
-no_resource_alert=Per a utilitzar l'eina de Podcasts, primer heu d'afegir l'eina de  
-no_resource_alert2=.
+no_resource_alert=Per a utilitzar l'eina de Podcasts, primer heu d'afegir l'eina de {0}.
 nofile_alert=Avís: Heu de triar un fitxer
 nodate_alert=Avís: Heu d'introduir una data i una hora
 notitle_alert=Avís: Heu de introduir un títol
