--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
@@ -40,8 +40,7 @@ max_size_exceeded_alert=Alerta\: Se ha sobrepasado el limite de tama\u00F1o de s
 new=Nuevo
 no_access=No esta autorizado a ver esta herramienta. Contacte con su centro de soporte.
 no_podcasts=No existen actualmente podcasts para esa ubicaci\u00F3n.
-no_resource_alert=Para usar la utilidad Podcast, primero ha de a\u00F1adir el
-no_resource_alert2=herramienta.
+no_resource_alert=Para usar la utilidad Podcast, primero ha de a\u00F1adir el {0} herramienta.
 nodate_alert=Alerta\: Tiene que introducir una fecha y una hora
 nofile_alert=Alerta\: Debe escoger un fichero
 notitle=Debe introducir un t\u00EDtulo
