--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_eu.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_eu.properties
@@ -93,8 +93,7 @@ options_site= Bistaratu gunearentzat
 
 option_change_confirm= Podcasten baimenak aldatu dira. Feed fitxategi hau ez da gehiago egongo modu publikoan ikusgai. Kide ez direnek sarbidea izan dezaten podcastera, hartu goiko Aukerak esteka, eta aukeratu radioaren botoia, Bistaratu kide ez direnentzat dioen tokiaren ondoan (baliabide publikoa).
 
-no_resource_alert= Podcast tresna erabiltzeko, aurrena  
-no_resource_alert2= tresna aukeratu behar duzu.
+no_resource_alert= Podcast tresna erabiltzeko, aurrena {0} tresna aukeratu behar duzu.
 nofile_alert=Alerta: Fitxategi bat aukeratu behar duzu
 nodate_alert=Alerta: Data eta ordua sartu behar dituzu
 notitle_alert=Alerta: Titulu bat sartu behar duzu
