--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_fr_CA.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_fr_CA.properties
@@ -80,9 +80,7 @@ no_access = Vous n'avez pas le droit de visualiser cet outil. Contactez votre ce
 
 no_podcasts = Il n'y a actuellement aucun balados \u00E0 cet endroit.
 
-no_resource_alert = Pour utiliser l'outil Balado, vous devez d'abord ajouter le
-
-no_resource_alert2 = outil.
+no_resource_alert = Pour utiliser l'outil Balado, vous devez d'abord ajouter l'outil {0}.
 
 nodate_alert = Alerte: Vous devez inscrire une date et une heure.
 
