--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_fr_FR.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_fr_FR.properties
@@ -55,8 +55,7 @@ max_size_exceeded_alert=Alerte \: La limite de taille de t\u00E9l\u00E9chargemen
 new=Nouveau
 no_access=Vous n'avez pas le droit de visualiser cet outil. Contactez votre centre de support technique local pour de l'aide.
 no_podcasts=Il n'y a actuellement aucune baladodiffusion \u00E0 cet endroit.
-no_resource_alert=Pour utiliser l'outil Baladodiffusion, vous devez d'abord ajouter le
-no_resource_alert2=outil.
+no_resource_alert=Pour utiliser l''outil Baladodiffusion, vous devez d''abord ajouter l''outil {0}.
 nodate_alert=Alerte \: Vous devez inscrire une date et une heure.
 nofile_alert=Alerte\: Vous devez s\u00E9lectionner un fichier.
 notitle=Vous devez inscrire un titre.
