--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ja.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ja.properties
@@ -77,8 +77,7 @@ options_site=\u30b5\u30a4\u30c8\u306b\u8868\u793a
 
 option_change_confirm=\u30dd\u30c3\u30c9\u30ad\u30e3\u30b9\u30c8\u30d5\u30a3\u30fc\u30c9\u306e\u6a29\u9650\u304c\u5909\u66f4\u3055\u308c\u3066\u307e\u3057\u305f\uff0e\u3053\u306e\u30d5\u30a3\u30fc\u30c9\u306f\u3059\u3067\u306b\u8ab0\u3082\u8868\u793a\u3059\u308b\u3053\u3068\u306f\u3067\u304d\u307e\u305b\u3093\uff0e\u53c2\u52a0\u8005\u3067\u306a\u3044\u30e6\u30fc\u30b6\u306b\u3053\u306e\u30b5\u30a4\u30c8\u306e\u30dd\u30c3\u30c9\u30ad\u30e3\u30b9\u30c8\u30d5\u30a3\u30fc\u30c9\u306b\u30a2\u30af\u30bb\u30b9\u3055\u305b\u305f\u3044\u5834\u5408\u306f\uff0c\u4e0a\u306e\u300c\u30aa\u30d7\u30b7\u30e7\u30f3\u300d\u30ea\u30f3\u30af\u3092\u9078\u629e\u3057\uff0c\u300c\u975e\u30e1\u30f3\u30d0\u306b\u8868\u793a(\u8ab0\u3067\u3082\u8868\u793a\u53ef\u80fd)\u300d\u306e\u96a3\u306e\u30e9\u30b8\u30aa\u30dc\u30bf\u30f3\u3092\u9078\u629e\u3057\u307e\u3059\uff0e
 
-no_resource_alert=\u300c\u30dd\u30c3\u30c9\u30ad\u30e3\u30b9\u30c8\u300d\u30c4\u30fc\u30eb\u3092\u4f7f\u7528\u3059\u308b\u305f\u3081\u306b\u306f\uff0c\u307e\u305a\uff0c
-no_resource_alert2= \u30c4\u30fc\u30eb\u3092\u8ffd\u52a0\u3057\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\uff0e
+no_resource_alert=\u300c\u30dd\u30c3\u30c9\u30ad\u30e3\u30b9\u30c8\u300d\u30c4\u30fc\u30eb\u3092\u4f7f\u7528\u3059\u308b\u305f\u3081\u306b\u306f\uff0c\u307e\u305a\uff0c {0} \u30c4\u30fc\u30eb\u3092\u8ffd\u52a0\u3057\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093\uff0e
 nofile_alert=\u8b66\u544a: You must choose a file
 nodate_alert=\u8b66\u544a: \u65e5\u4ed8\u3092\u5165\u529b\u3057\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093
 notitle_alert=\u8b66\u544a: \u30bf\u30a4\u30c8\u30eb\u3092\u5165\u529b\u3057\u306a\u3051\u308c\u3070\u306a\u308a\u307e\u305b\u3093
