--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_nl.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_nl.properties
@@ -80,9 +80,7 @@ no_access = Je bent niet bevoegd om deze functie te gebruiken. Neem contact op m
 
 no_podcasts = Er zijn momenteel geen podcasts op deze locatie.
 
-no_resource_alert = Om de Podcast tool te gebruiken moet eerst de Resources tool worden toegevoegd.
-
-no_resource_alert2 = functie.
+no_resource_alert = Om de Podcast tool te gebruiken moet eerst de Resources tool worden toegevoegd {0} functie.
 
 nodate_alert = Attentie: de datum en tijd zijn verplicht.
 
