--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_BR.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_BR.properties
@@ -82,8 +82,7 @@ options_site	=	Apresentar para o site
 
 option_change_confirm	=	As permiss\u00f5es para o feed do Podcasts foram alteradas. Este feed n\u00e3o est\u00e1 mais vis\u00edvel para todos. Para n\u00e3o-participantes acessarem o feed do podcast deste site, selecione o link Op\u00e7\u00f5es acima e selecione o item para Apresentar para n\u00e3o-membros (vis\u00edvel para todos).
 
-no_resource_alert	=	Para usar a ferramenta Podcast, voc\u00ea deve primeiro adicionar a 
-no_resource_alert2	=	ferramenta.
+no_resource_alert	=	Para usar a ferramenta Podcast, voc\u00ea deve primeiro adicionar a {0} ferramenta.
 nofile_alert	=	Alerta: Voc\u00ea deve escolher um arquivo
 nodate_alert	=	Alerta: Voc\u00ea deve entrar com uma data e hor\u00e1rio
 notitle_alert	=	Alerta: Voc\u00ea deve entrar com um t\u00edtulo
