--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_PT.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_PT.properties
@@ -39,8 +39,7 @@ maint=Maintain
 new=Criar
 no_access=N\u00E3o est\u00E1 autorizado a utilizar esta ferramenta. Contacte o Suporte para assist\u00EAncia.
 no_podcasts=N\u00E3o existem Podcasts.
-no_resource_alert=Para utilizar a ferramenta Podcasts, \u00E9 necess\u00E1rio addicionar primeiro a ferramenta 
-no_resource_alert2=.
+no_resource_alert=Para utilizar a ferramenta Podcasts, \u00E9 necess\u00E1rio addicionar primeiro a ferramenta {0}.
 nodate_alert=Aviso\: \u00C9 necess\u00E1rio introduzir uma data
 nofile_alert=Aviso\: Tem de seleccionar um ficheiro
 notitle=T\u00EDtulo n\u00E3o especificado
