--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_sv.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_sv.properties
@@ -40,8 +40,7 @@ max_size_exceeded_alert=Varning\: Maxuppladdningsgr\u00E4nsen p\u00E5 {0} MB har
 new=Ny
 no_access=Du har inte till\u00E5telse att se detta verktyg. Kontakta din l\u00E4rare eller support f\u00F6r hj\u00E4lp.
 no_podcasts=Det finns f\u00F6r n\u00E4rvarande inga podcasts h\u00E4r.
-no_resource_alert=F\u00F6r att kunna anv\u00E4nda postcast-verktyget s\u00E5 m\u00E5ste du f\u00F6rst l\u00E4gga till verktyget
-no_resource_alert2=p\u00E5 sajten.
+no_resource_alert=F\u00F6r att kunna anv\u00E4nda postcast-verktyget s\u00E5 m\u00E5ste du f\u00F6rst l\u00E4gga till verktyget {0} p\u00E5 sajten.
 nodate_alert=Observera\: Du m\u00E5ste ange ett datum och tid.
 nofile_alert=Observera\: Du m\u00E5ste v\u00E4lja en fil.
 notitle=Du m\u00E5ste ange en rubrik
