--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_zh_TW.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_zh_TW.properties
@@ -72,8 +72,7 @@ options_directions3 = \u9078\u64c7\u986f\u793a\u7d66\u7db2\u7ad9\u3002
 options_public = \u5411\u975e\u6210\u54e1\u986f\u793a\uff08\u53ef\u516c\u958b\u6aa2\u8996\uff09 
 options_site = \u5411\u7db2\u7ad9\u986f\u793a 
 option_change_confirm = \u64ad\u5ba2\u6458\u8981\u7684\u6b0a\u9650\u5df2\u66f4\u6539\u3002\u6b64\u6458\u8981\u4e0d\u518d\u662f\u516c\u958b\u53ef\u898b\u7684\u3002\u5c0d\u65bc\u975e\u53c3\u8207\u8005\u5728\u6b64\u7db2\u7ad9\u5b58\u53d6\u64ad\u5ba2\u6458\u8981\uff0c\u9078\u64c7\u4e0a\u9762\u9078\u9805\u9023\u7d50\uff0c\u4e26\u9078\u64c7\u65c1\u908a\u7684\u9078\u9805\u6309\u9215\u4f86\u986f\u793a\u7d66\u975e\u6210\u54e1\uff08\u516c\u958b\u53ef\u898b\u7684\uff09 \u3002 
-no_resource_alert = \u5982\u9700\u4f7f\u7528\u64ad\u5ba2\u7684\u5de5\u5177\uff0c\u60a8\u5fc5\u9808\u5148\u52a0\u5165 
-no_resource_alert2 = \u5de5\u5177\u3002 
+no_resource_alert = \u5982\u9700\u4f7f\u7528\u64ad\u5ba2\u7684\u5de5\u5177\uff0c\u60a8\u5fc5\u9808\u5148\u52a0\u5165 {0} \u5de5\u5177\u3002 
 nofile_alert = \u8b66\u793a\uff1a\u60a8\u5fc5\u9808\u9078\u64c7\u4e00\u500b\u6a94\u6848 
 nodate_alert = \u8b66\u793a\uff1a\u60a8\u5fc5\u9808\u8f38\u5165\u65e5\u671f\u548c\u6642\u9593 
 notitle_alert = \u8b66\u793a\uff1a\u60a8\u5fc5\u9808\u8f38\u5165\u6a19\u984c 
