SAK-14647 Split i18n sentence breaking L10n in Podcasts (French Canadian example) - 2.5.x
git-svn-id: https://source.sakaiproject.org/svn/podcasts/branches/sakai_2-5-x@78751 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
@@ -21,7 +21,16 @@ delete=Borrar
 download=Descargar
 maint=Mantener
 new=Nuevo
-on=en 
+no_access=No esta autorizado a ver esta herramienta. Contacte con su centro de soporte.
+no_podcasts=No existen actualmente podcasts para esa ubicaci\u00F3n.
+no_resource_alert=Para usar la utilidad Podcast, primero ha de a\u00F1adir el {0} herramienta.
+nodate_alert=Alerta\: Tiene que introducir una fecha y una hora
+nofile_alert=Alerta\: Debe escoger un fichero
+notitle=Debe introducir un t\u00EDtulo
+notitle_alert=Alerta\: Debe introducir un t\u00EDtulo
+on=en
+open_paren=(
+option_change_confirm=Los permisos del feed del Podcast han cambiado. Este feed ya no ed p\u00FAblico. Para dar acceso a los no participantes del feed del podcast, seleccione el enl\u00E1ce de Opciones de encima y seleccione el bot\u00F3n de radio al lado de la Vista de los no miembros (visible en p\u00FAblico).
 options=Opciones
 permissions=Permisos
 read=Leer
