(SAK-18485) update Spanish translation
git-svn-id: https://source.sakaiproject.org/svn/podcasts/trunk@79134 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
@@ -81,3 +81,4 @@ spacer_bar=|
 subscribe=Subscibir\:
 title_prompt=T\u00EDtulo
 max_size_exceeded_alert=\u00A1Atenci\u00F3n! El tama\u00F1o del fichero excede el l\u00EDmite de {0} MB.
+permission_directions = Establecer los permisos para la carpeta de Podcasts en el sitio de trabajo {0}
