--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_ca.properties
@@ -1,118 +1,82 @@
-#
-# Copyright (c) 2009 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-podcast_home_title=Podcasts
-podcast_home_sub=Subscriviu-vos ara copiant l'adreça d'aquest generador RSS i enganxant-la als vostres preferits
-podcatcher=podcatcher
-
-feed_title=Podcast per a
-feed_desc1= \ podcast oficial.
-feed_desc2= \ Comproveu les actualitzacions per a tot el semestre. 
-feed_copyright=Copyright 2006 The Sakai Foundation. All rights reserved.
-
-no_podcasts=Actualment no hi ha podcasts en aquesta ubicació.
-no_access=No esteu autoritzats per a veure aquesta eina. Contacteu amb el vostre punt de suport per a rebre assistència.
-
-posted_by=Enviat per 
-
-access=Accés
-add=Afegir
-at=a
-cancel=Cancel·lar
-colon=:
-delete=Suprimir
-download=Descarregar
-maint=Mantenir
-new=Nou
-on=en
-options=Opcions
-permissions=Permisos
-read=Llegir
-revise=Revisar
-role=Rol
-subscribe=Subscriure:
-
-close_paren=)
-open_paren=(
-spacer_bar= | 
-
-publish_date_format=EEEEEE',' dd MMMMM aaaa hh:mm a z
-date_picker_format=MM/dd/aaaa hh:mm:ss a
-date_by_hand_format=MM/dd/aaaa hh:mm a
-date_picker_format_string=(Format: MM/DD/AAAA HH:MM AM/PM)
-internal_date_format=aaaaMMddhhmmssSSS
-
-popup_text=Un podcatcher és un programa informàtic per a descarregar automàticament podcasts. iTunes és un podcatcher molt popular, però no és l'únic disponible per a aquest propòsit. 
-
-current_file=Fitxer actual
-current_date=Data/Hora de publicació actual
-
-required_prompt=Els elements obligatoris estan marcats amb 
-file_prompt=Trieu un fitxer 
-date_prompt=Data/Hora de publicació 
-title_prompt=Títol
-change_submit=Desar canvis
-file_to_upload=Fitxer a pujar
-
-add_title=Afegir Podcast
-add_directions=Completeu el formulari, i trieu el botó apropiat de la part final.
-
-description_prompt=Descripció
-email_prompt=Notificació per correu electrònic
-
-delete_title=Suprimint Podcast...
-delete_submit=Suprimir
-del_confirm=Esteu segurs que voleu suprimir el següent podcast?
-
-revise_title=Revisar Podcast
-revise_directions=Actualitzeu el formulari, i trieu el botó apropiat de la part final.
-
-perm_title=Permisos
-perm_directions=Especifiqueu els permisos per als podcasts en l'espai de treball
-
-options_title=Opcions
-options_directions1=Per a proporcionar accés als vostres podcasts a través de
-options_directions2=trieu Mostrar als no membres (disponible públicament). Per restringir l'accés als vostres podcasts als participants del vostre espai i deshabilitar l'accés a través de
+#Thu Nov 18 07:36:41 CET 2010
+title_prompt=T\u00EDtol
+date_prompt=Data/Hora de publicaci\u00F3 
+invalid_date_alert=Heu d'introduir una data amb el seg\u00FCent format\: MM/DD/YYYY HH\:MM AM/PM
+del_confirm=Esteu segurs que voleu suprimir el seg\u00FCent podcast?
+internal_error_alert=Un error intern no ha  perm\u00E9s finalitzar la vostra operaci\u00F3. Proveu-ho de nou.
 options_directions3=trieu Mostrar a l'Espai.
-
-options_public=Mostrar als no membres (visible públicament)
-options_site=Mostrar a l'espai
-
-option_change_confirm=Els permisos del generador de Podcasts han canviat. Aquest generador ja no serà visible públicament. Per a que els no participants puguin accedir al generador de podcasts per aquest espai, feu clic a Opcions i escolliu el botó de grup corresponent a Mostrar als no membres (visible públicament).   
-
-no_resource_alert=Per a utilitzar l'eina de Podcasts, primer heu d'afegir l'eina de {0}.
-nofile_alert=Avís: Heu de triar un fitxer
-nodate_alert=Avís: Heu d'introduir una data i una hora
-notitle_alert=Avís: Heu de introduir un títol
-notitle=Heu de introduir un títol
-length_alert=La URL del podcast, inclòs el nom de fitxer, no pot excedir de 254 caràcters. Per afegir aquest podcast correctament, reduïu la mida del nom de fitxer i proveu-ho de nou.
-quota_alert=Heu excedit la vostra quota de Recursos. Suprimiu elements i proveu-ho de nou.
-permission_alert=No teniu permisos per a suprimir el fitxer seleccionat.
-internal_error_alert=Un error intern no ha  permés finalitzar la vostra operació. Proveu-ho de nou.
-id_unused_alert=L'ID del recurs no correspon a cap recurs vàlid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
-id_invalid_alert=L'ID del recurs és d'un recurs invàlid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
-io_alert=Hi havia un problema pujant el vostre fitxer. Comproveu el camí o torneu a seleccionar-lo i proveu-ho de nou. 
-id_used_alert=L'ID del recurs ja existeix. Reintenteu-ho amb un altre.
-invalid_date_alert=Heu d'introduir una data amb el següent format: MM/DD/YYYY HH:MM AM/PM
-
-podfeed_revise_title=Reviseu el Generador de Podcast
-podfeed_revise_directions=El títol i la descripció del generador de podcast estarà disponible als participants de l'espai des del seu podcatcher. Actualitzeu el formulari, i seleccioneu el botó apropiat de la part final.
- 
-podfeed_revise_url_caption=Adreça del generador de RSS
-
-podfeed_author=Creat per Sakai
+options_directions2=trieu Mostrar als no membres (disponible p\u00FAblicament). Per restringir l'acc\u00E9s als vostres podcasts als participants del vostre espai i deshabilitar l'acc\u00E9s a trav\u00E9s de
+options_directions1=Per a proporcionar acc\u00E9s als vostres podcasts a trav\u00E9s de
+change_submit=Desar canvis
+notitle_alert=Av\u00EDs\: Heu de introduir un t\u00EDtol
+publish_date_format=EEEEEE',' dd MMMMM aaaa hh\:mm a z
+podcast_home_title=Podcasts
+add=Afegir
+feed_desc2=\ Comproveu les actualitzacions per a tot el semestre. 
+spacer_bar=| 
+feed_copyright=Copyright 2006 The Sakai Foundation. All rights reserved.
+feed_desc1=\ podcast oficial.
+maint=Mantenir
+add_directions=Completeu el formulari, i trieu el bot\u00F3 apropiat de la part final.
+max_size_exceeded_alert=Atenci\u00F3\! La mida del fitxer excedeix el l\u00EDmit de {0} MB.
+add_title=Afegir Podcast
+colon=\:
+permissions=Permisos
+io_alert=Hi havia un problema pujant el vostre fitxer. Comproveu el cam\u00ED o torneu a seleccionar-lo i proveu-ho de nou. 
+id_invalid_alert=L'ID del recurs \u00E9s d'un recurs inv\u00E0lid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
 podfeed_copyrighttext=Copyright 2006.
-#Sakai 2009
-max_size_exceeded_alert=Atenció! La mida del fitxer excedeix el límit de {0} MB.
+file_prompt=Trieu un fitxer 
+perm_title=Permisos
+revise=Revisar
+no_resource_alert=Per a utilitzar l'eina de Podcasts, primer heu d'afegir l'eina de {0}.
+open_paren=(
+delete_title=Suprimint Podcast...
+on=en
+revise_title=Revisar Podcast
+podfeed_revise_title=Reviseu el Generador de Podcast
+description_prompt=Descripci\u00F3
+role=Rol
+quota_alert=Heu excedit la vostra quota de Recursos. Suprimiu elements i proveu-ho de nou.
+date_picker_format=MM/dd/aaaa hh\:mm\:ss a
+internal_date_format=aaaaMMddhhmmssSSS
+subscribe=Subscriure\:
+current_date=Data/Hora de publicaci\u00F3 actual
+new=Nou
+read=Llegir
+required_prompt=Els elements obligatoris estan marcats amb 
+close_paren=)
+delete_submit=Suprimir
+feed_title=Podcast per a
+options=Opcions
+access=Acc\u00E9s
+no_podcasts=Actualment no hi ha podcasts en aquesta ubicaci\u00F3.
+current_file=Fitxer actual
+nodate_alert=Av\u00EDs\: Heu d'introduir una data i una hora
+at=a
+permission_alert=No teniu permisos per a suprimir el fitxer seleccionat.
+option_change_confirm=Els permisos del generador de Podcasts han canviat. Aquest generador ja no ser\u00E0 visible p\u00FAblicament. Per a que els no participants puguin accedir al generador de podcasts per aquest espai, feu clic a Opcions i escolliu el bot\u00F3 de grup corresponent a Mostrar als no membres (visible p\u00FAblicament).   
+perm_directions=Especifiqueu els permisos per als podcasts en l'espai de treball
+file_to_upload=Fitxer a pujar
+id_unused_alert=L'ID del recurs no correspon a cap recurs v\u00E0lid. Proveu-ho de nou i si es repeteix, contacteu amb el punt de suport per a solucionar-ho.
+date_picker_format_string=(Format\: MM/DD/AAAA HH\:MM AM/PM)
+email_prompt=Notificaci\u00F3 per correu electr\u00F2nic
+download=Descarregar
+nofile_alert=Av\u00EDs\: Heu de triar un fitxer
+podcast_home_sub=Subscriviu-vos ara copiant l'adre\u00E7a d'aquest generador RSS i enganxant-la als vostres preferits
+podfeed_revise_url_caption=Adre\u00E7a del generador de RSS
+options_public=Mostrar als no membres (visible p\u00FAblicament)
+options_site=Mostrar a l'espai
+length_alert=La URL del podcast, incl\u00F2s el nom de fitxer, no pot excedir de 254 car\u00E0cters. Per afegir aquest podcast correctament, redu\u00EFu la mida del nom de fitxer i proveu-ho de nou.
+delete=Suprimir
+date_by_hand_format=MM/dd/aaaa hh\:mm a
+options_title=Opcions
+podcatcher=podcatcher
+notitle=Heu de introduir un t\u00EDtol
+popup_text=Un podcatcher \u00E9s un programa inform\u00E0tic per a descarregar autom\u00E0ticament podcasts. iTunes \u00E9s un podcatcher molt popular, per\u00F2 no \u00E9s l'\u00FAnic disponible per a aquest prop\u00F2sit. 
+cancel=Cancel\u00B7lar
+posted_by=Enviat per 
+id_used_alert=L'ID del recurs ja existeix. Reintenteu-ho amb un altre.
+no_access=No esteu autoritzats per a veure aquesta eina. Contacteu amb el vostre punt de suport per a rebre assist\u00E8ncia.
+podfeed_author=Creat per Sakai
+podfeed_revise_directions=El t\u00EDtol i la descripci\u00F3 del generador de podcast estar\u00E0 disponible als participants de l'espai des del seu podcatcher. Actualitzeu el formulari, i seleccioneu el bot\u00F3 apropiat de la part final.
+revise_directions=Actualitzeu el formulari, i trieu el bot\u00F3 apropiat de la part final.
