--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_fr_FR.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_fr_FR.properties
@@ -1,97 +1,82 @@
-# Copyright (C) 2008,2009 Universit\u00E9 Pierre et Marie Curie
-#
-# Available under the license specified in the Sakai release
-#
-# Contact:
-# Jean-Fran\u00E7ois L\u00E9v\u00EAque (jean-francois.leveque@upmc.fr)
-#
-# Translators:
-# Jean-Fran\u00E7ois L\u00E9v\u00EAque (Universit\u00E9 Pierre et Marie Curie)
-# Cyril Vassiat (C@rrefours T\u00E9l\u00E9matiques)
-#
-# Validation:
-# Fr\u00E9d\u00E9ric Dooremont (Universit\u00E9 du Littoral C\u00F4te d'Opale, Frederic.Dooremont@univ-littoral.fr)
-# Laurent Petit (Universit\u00E9 Pierre et Marie Curie)
-
-#Stored by I18NEdit, may be edited!
-access=Acc\u00E8s
-add=Ajouter
-add_directions=Compl\u00E9tez ce formulaire, puis s\u00E9lectionnez le bouton appropri\u00E9 au bas.
-add_title=Ajouter baladodiffusion
-at=\u00E0
-cancel=Annuler
-change_submit=Enregistrer modifications
-close_paren=)
-colon=\:
-current_date=Date/Heure de publication actuelle
-current_file=Fichier actuel
-date_by_hand_format=MM/dd/yyyy hh\:mm a
-date_picker_format=MM/dd/yyyy hh\:mm\:ss a
-date_picker_format_string=(Format\: MM/DD/YYYY HH\:MM AM/PM)
+#Thu Nov 18 07:45:47 CET 2010
+title_prompt=Titre
 date_prompt=Date/Heure de publication
 del_confirm=Voulez-vous vraiment supprimer les baladodiffusion suivantes ?
-delete=Supprimer
-delete_submit=Supprimer
-delete_title=Suppression de la baladodiffusion...
-description_prompt=Description
-download=T\u00E9l\u00E9charger
-email_prompt=Notification par courriel
+invalid_date_alert=Vous devez inscrire la date dans le format suivant\: MM/DD/YYYY HH\:MM AM/PM
+internal_error_alert=Une erreur interne a emp\u00EAch\u00E9 votre op\u00E9ration de se compl\u00E9ter. Veuillez essayer \u00E0 nouveau.
+options_directions3=s\u00E9lectionnez Afficher dans le site.
+options_directions2=s\u00E9lectionnez Afficher aux non membres (visible publiquement). Pour limiter l'acc\u00E8s \u00E0 vos baladodiffusions aux particpants de votre site et d\u00E9sactiver l'acc\u00E8s par l'entremise de 
+options_directions1=Pour fournir un acc\u00E8s \u00E0 vos baladodiffusions par l'entremise de
+change_submit=Enregistrer modifications
+notitle_alert=Alerte \: Vous devez inscrire un titre.
+publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
+podcast_home_title=Baladodiffusions
+add=Ajouter
+spacer_bar=| 
+feed_desc2=Veuillez v\u00E9rifier les mises \u00E0 jour au cours de la session.
 feed_copyright=Tous droits r\u00E9serv\u00E9s 2007. The Trustees of Indiana University.
 feed_desc1=baladodiffusion officielle.
-feed_desc2=Veuillez v\u00E9rifier les mises \u00E0 jour au cours de la session.
-feed_title=baladodiffusion pour
-file_prompt=S\u00E9lectionnez un fichier
-file_to_upload=Fichier \u00E0 d\u00E9poser
-id_invalid_alert=L'ID pour la ressource est une ressource invalide. Veuillez essayer \u00E0 nouveau. Si le probl\u00E8me se produit \u00E0 nouveau, contactez le support technique pour le r\u00E9soudre.
-id_unused_alert=L'ID pour la ressource ne correspond pas \u00E0 une ressource valide. Veuillez essayer \u00E0 nouveau. Si le probl\u00E8me se produit \u00E0 nouveau, contactez le support technique pour le r\u00E9soudre.
-id_used_alert=L'ID de la ressource est d\u00E9j\u00E0 utilis\u00E9. Veuillez essayer \u00E0 nouveau.
-internal_date_format=yyyyMMddhhmmssSSS
-internal_error_alert=Une erreur interne a emp\u00EAch\u00E9 votre op\u00E9ration de se compl\u00E9ter. Veuillez essayer \u00E0 nouveau.
-invalid_date_alert=Vous devez inscrire la date dans le format suivant\: MM/DD/YYYY HH\:MM AM/PM
-io_alert=Un probl\u00E8me s'est produit lors du t\u00E9l\u00E9versement de votre fichier. Veuillez v\u00E9rifier le nom du chemin d'acc\u00E8s et essayez \u00E0 nouveau.
-length_alert=L'URL de la baladodiffusion, incluant le nom du fichier, ne peut pas exc\u00E9der 254 caract\u00E8res. Pour ajouter cette baladodiffusion avec succ\u00E8s, r\u00E9duisez la taille du nom de fichier et essayez \u00E0 nouveau.
 maint=Maintenir
+add_directions=Compl\u00E9tez ce formulaire, puis s\u00E9lectionnez le bouton appropri\u00E9 au bas.
 max_size_exceeded_alert=Alerte \: La limite de taille de t\u00E9l\u00E9chargement  de {0} mbs a \u00E9t\u00E9 d\u00E9pass\u00E9e
-new=Nouveau
-no_access=Vous n'avez pas le droit de visualiser cet outil. Contactez votre centre de support technique local pour de l'aide.
-no_podcasts=Il n'y a actuellement aucune baladodiffusion \u00E0 cet endroit.
+add_title=Ajouter baladodiffusion
+colon=\:
+permissions=Droits d'acc\u00E8s
+io_alert=Un probl\u00E8me s'est produit lors du t\u00E9l\u00E9versement de votre fichier. Veuillez v\u00E9rifier le nom du chemin d'acc\u00E8s et essayez \u00E0 nouveau.
+id_invalid_alert=L'ID pour la ressource est une ressource invalide. Veuillez essayer \u00E0 nouveau. Si le probl\u00E8me se produit \u00E0 nouveau, contactez le support technique pour le r\u00E9soudre.
+podfeed_copyrighttext=Tous droits r\u00E9serv\u00E9s  {0}.\n\n\n\n
+file_prompt=S\u00E9lectionnez un fichier
+perm_title=Droits d'acc\u00E8s
+revise=Editer
 no_resource_alert=Pour utiliser l''outil Baladodiffusion, vous devez d''abord ajouter l''outil {0}.
-nodate_alert=Alerte \: Vous devez inscrire une date et une heure.
-nofile_alert=Alerte\: Vous devez s\u00E9lectionner un fichier.
-notitle=Vous devez inscrire un titre.
-notitle_alert=Alerte \: Vous devez inscrire un titre.
-on=le
 open_paren=(
-option_change_confirm=Les droits d'acc\u00E8s pour le fil de syndication des balados ont \u00E9t\u00E9 modifi\u00E9s. Ce fil de syndication n'est plus visible publiquement. Pour que les non participants puissent acc\u00E9der au fil de syndication pour ce site, s\u00E9lectionnez le lien Options ci-dessus et s\u00E9lectionnez le bouton radio correspondant \u00E0 Afficher aux non membres (visible publiquement).
+delete_title=Suppression de la baladodiffusion...
+on=le
+revise_title=Editer baladodiffusion
+podfeed_revise_title=Modifier le fil de syndication de la baladodiffusion
+description_prompt=Description
+role=R\u00F4le
+quota_alert=Vous avez d\u00E9pass\u00E9 votre quota dans les ressources. Supprimez des \u00E9l\u00E9ments et essayez \u00E0 nouveau.
+date_picker_format=MM/dd/yyyy hh\:mm\:ss a
+internal_date_format=yyyyMMddhhmmssSSS
+subscribe=Adh\u00E9rez \:
+current_date=Date/Heure de publication actuelle
+new=Nouveau
+required_prompt=El\u00E9ments obligatoires indiqu\u00E9s par un
+read=Lire
+close_paren=)
+delete_submit=Supprimer
+feed_title=baladodiffusion pour
 options=Options
-options_directions1=Pour fournir un acc\u00E8s \u00E0 vos baladodiffusions par l'entremise de
-options_directions2=s\u00E9lectionnez Afficher aux non membres (visible publiquement). Pour limiter l'acc\u00E8s \u00E0 vos baladodiffusions aux particpants de votre site et d\u00E9sactiver l'acc\u00E8s par l'entremise de 
-options_directions3=s\u00E9lectionnez Afficher dans le site.
+access=Acc\u00E8s
+no_podcasts=Il n'y a actuellement aucune baladodiffusion \u00E0 cet endroit.
+current_file=Fichier actuel
+nodate_alert=Alerte \: Vous devez inscrire une date et une heure.
+at=\u00E0
+permission_alert=Vous n'avez pas le droit de supprimer le fichier s\u00E9lectionn\u00E9.
+option_change_confirm=Les droits d'acc\u00E8s pour le fil de syndication des balados ont \u00E9t\u00E9 modifi\u00E9s. Ce fil de syndication n'est plus visible publiquement. Pour que les non participants puissent acc\u00E9der au fil de syndication pour ce site, s\u00E9lectionnez le lien Options ci-dessus et s\u00E9lectionnez le bouton radio correspondant \u00E0 Afficher aux non membres (visible publiquement).
+perm_directions=R\u00E9gler les droits d'acc\u00E8s aux baladodiffusions dans le site
+file_to_upload=Fichier \u00E0 d\u00E9poser
+id_unused_alert=L'ID pour la ressource ne correspond pas \u00E0 une ressource valide. Veuillez essayer \u00E0 nouveau. Si le probl\u00E8me se produit \u00E0 nouveau, contactez le support technique pour le r\u00E9soudre.
+date_picker_format_string=(Format\: MM/DD/YYYY HH\:MM AM/PM)
+email_prompt=Notification par courriel
+download=T\u00E9l\u00E9charger
+nofile_alert=Alerte\: Vous devez s\u00E9lectionner un fichier.
+podcast_home_sub=Adh\u00E9rez maintenant en copiant ce fil de syndication RSS et en le collant dans votre favoris
+podfeed_revise_url_caption=Adresse du fil de syndication RSS
 options_public=Afficher aux non membre (visible publiquement)
 options_site=Afficher dans le site
+length_alert=L'URL de la baladodiffusion, incluant le nom du fichier, ne peut pas exc\u00E9der 254 caract\u00E8res. Pour ajouter cette baladodiffusion avec succ\u00E8s, r\u00E9duisez la taille du nom de fichier et essayez \u00E0 nouveau.
+delete=Supprimer
+date_by_hand_format=MM/dd/yyyy hh\:mm a
 options_title=Options
-perm_directions=R\u00E9gler les droits d'acc\u00E8s aux baladodiffusions dans le site
-perm_title=Droits d'acc\u00E8s
-permission_alert=Vous n'avez pas le droit de supprimer le fichier s\u00E9lectionn\u00E9.
-permissions=Droits d'acc\u00E8s
-podcast_home_sub=Adh\u00E9rez maintenant en copiant ce fil de syndication RSS et en le collant dans votre favoris
-podcast_home_title=Baladodiffusions
 podcatcher=agr\u00E9gateur
-podfeed_author=Cr\u00E9\u00E9 par Sakai
-podfeed_copyrighttext=Tous droits r\u00E9serv\u00E9s  {0}.\n\n\n\n
-podfeed_revise_directions=Le titre et la description du fil de syndication de la baladodiffusion sera disponible aux participants du site \u00E0 partir de leur logiciel agr\u00E9gateur. Mettez \u00E0 jour le formulaire, puis s\u00E9lectionnez le bouton appropri\u00E9 au bas.
-podfeed_revise_title=Modifier le fil de syndication de la baladodiffusion
-podfeed_revise_url_caption=Adresse du fil de syndication RSS
+notitle=Vous devez inscrire un titre.
 popup_text=Un agr\u00E9gateur est un logiciel utilis\u00E9 pour t\u00E9l\u00E9charger automatiquement des baladodiffusions. iTunes est un agr\u00E9gateur populaire, mais n'est pas le seul logiciel disponible pour cette t\u00E2che.
+cancel=Annuler
 posted_by=Publi\u00E9 par
-publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
-quota_alert=Vous avez d\u00E9pass\u00E9 votre quota dans les ressources. Supprimez des \u00E9l\u00E9ments et essayez \u00E0 nouveau.
-read=Lire
-required_prompt=El\u00E9ments obligatoires indiqu\u00E9s par un
-revise=Editer
+id_used_alert=L'ID de la ressource est d\u00E9j\u00E0 utilis\u00E9. Veuillez essayer \u00E0 nouveau.
+no_access=Vous n'avez pas le droit de visualiser cet outil. Contactez votre centre de support technique local pour de l'aide.
+podfeed_revise_directions=Le titre et la description du fil de syndication de la baladodiffusion sera disponible aux participants du site \u00E0 partir de leur logiciel agr\u00E9gateur. Mettez \u00E0 jour le formulaire, puis s\u00E9lectionnez le bouton appropri\u00E9 au bas.
+podfeed_author=Cr\u00E9\u00E9 par Sakai
 revise_directions=Mettez \u00E0 jour le formulaire, puis s\u00E9lectionnez le bouton appropri\u00E9 en bas de la page .
-revise_title=Editer baladodiffusion
-role=R\u00F4le
-spacer_bar=| 
-subscribe=Adh\u00E9rez \:
-title_prompt=Titre
