--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_es.properties
@@ -1,84 +1,83 @@
-
-access=Acceso
-add=A\u00F1adir
-add_directions=Complete el formulario y a continuaci\u00F3n escoja el bot\u00F3n apropiado
-add_title=A\u00F1adir Podcast
-at=en
-cancel=Cancelar
-change_submit=Guardar Cambios
-close_paren=)
-colon=\:
-current_date=Fecha/Hora de Publicaci\u00F3n Actual
-current_file=Fichero actual
-date_by_hand_format=MM/dd/yyyy hh\:mm a
-date_picker_format=MM/dd/yyyy hh\:mm\:ss a
-date_picker_format_string=(Formato\: MM/DD/YYYY HH\:MM AM/PM)
+#Thu Nov 18 07:39:11 CET 2010
+title_prompt=T\u00EDtulo
 date_prompt=Fecha/Hora de Publicaci\u00F3n
 del_confirm=\u00BFEst\u00E1 seguro de querer borrar los podcast siguientes?
-delete=Borrar
-delete_submit=Borrar
-delete_title=Borrando Podcast...
-description_prompt=Descripci\u00F3n
-download=Descargar
-email_prompt=Notificaci\u00F3n por Email
+invalid_date_alert=Ha de introducir la fecha en el siguiente formato\: MM/DD/YYYY HH\:MM AM/PM
+internal_error_alert=Un error interno impidi\u00F3 que su operaci\u00F3n se completara. Por favor intente otra vez.
+options_directions3=escoja Mostrar el Sitio.
+options_directions2=escoja Mostar los no-miembros (visible p\u00FAblicamente). Para restringir el acceso al podcast de los participantes de su sitio y desactivar en acceso a trav\u00E9s de
+options_directions1=Para proveer acceso a su podcast a traves de un
+change_submit=Guardar Cambios
+notitle_alert=Alerta\: Debe introducir un t\u00EDtulo
+publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
+podcast_home_title=Podcasts
+add=A\u00F1adir
+spacer_bar=| 
+feed_desc2=Por favor compruebe otra vez a lo largo del semestre para actualizar.
 feed_copyright=Copyright 2006 The Sakai Foundation. All rights reserved.
 feed_desc1=Podcast oficial.
-feed_desc2=Por favor compruebe otra vez a lo largo del semestre para actualizar.
-feed_title=Podcast para
-file_prompt=Escoja un fichero
-file_to_upload=Fichero para subir
-id_invalid_alert=La ID del recurso es invalida. Por favor pruebe otra vez y si vuelve a ocurrir contacte con el soporte para resolver el problema.
-id_unused_alert=La ID para el recurso no corresponde con un recurso v\u00E1lido. Por favor pruebe otra vez y si esto vuelve a ocurrir contante con el soporte.
-id_used_alert=La ID del recurso ya est\u00E1 en uso. Por favor vuelva a intentarlo.
-internal_date_format=yyyyMMddhhmmssSSS
-internal_error_alert=Un error interno impidi\u00F3 que su operaci\u00F3n se completara. Por favor intente otra vez.
-invalid_date_alert=Ha de introducir la fecha en el siguiente formato\: MM/DD/YYYY HH\:MM AM/PM
-io_alert=Hubio un problema con la carga de su archivo. Por favor compruebe la ruta o re-escoja e intente otra vez.
-length_alert=La URL, incluyendo el nombre del fichero, no puede exceder de 254 caractertes. Para a\u00F1adir este podcast reduzca el contenido del nombre del fichero y pruebe otra vez
 maint=Mantener
-max_size_exceeded_alert=Alerta\: Se ha sobrepasado el limite de tama\u00F1o de subida de {0} MB
-new=Nuevo
-no_access=No esta autorizado a ver esta herramienta. Contacte con su centro de soporte.
-no_podcasts=No existen actualmente podcasts para esa ubicaci\u00F3n.
+add_directions=Complete el formulario y a continuaci\u00F3n escoja el bot\u00F3n apropiado
+max_size_exceeded_alert=\u00A1Atenci\u00F3n\! El tama\u00F1o del fichero excede el l\u00EDmite de {0} MB.
+add_title=A\u00F1adir Podcast
+colon=\:
+permissions=Permisos
+io_alert=Hubio un problema con la carga de su archivo. Por favor compruebe la ruta o re-escoja e intente otra vez.
+id_invalid_alert=La ID del recurso es invalida. Por favor pruebe otra vez y si vuelve a ocurrir contacte con el soporte para resolver el problema.
+permission_directions=Establecer los permisos para la carpeta de Podcasts en el sitio de trabajo {0}
+podfeed_copyrighttext=Copyright 2007.
+file_prompt=Escoja un fichero
+perm_title=Permisos
+revise=Editar
 no_resource_alert=Para usar la utilidad Podcast, primero ha de a\u00F1adir el {0} herramienta.
-nodate_alert=Alerta\: Tiene que introducir una fecha y una hora
-nofile_alert=Alerta\: Debe escoger un fichero
-notitle=Debe introducir un t\u00EDtulo
-notitle_alert=Alerta\: Debe introducir un t\u00EDtulo
-on=en
 open_paren=(
-option_change_confirm=Los permisos del feed del Podcast han cambiado. Este feed ya no ed p\u00FAblico. Para dar acceso a los no participantes del feed del podcast, seleccione el enl\u00E1ce de Opciones de encima y seleccione el bot\u00F3n de radio al lado de la Vista de los no miembros (visible en p\u00FAblico).
+delete_title=Borrando Podcast...
+on=en
+revise_title=Editar el Podcast
+podfeed_revise_title=Editar el Feed del Podcast
+description_prompt=Descripci\u00F3n
+role=Rol
+quota_alert=Ha accedido el espacio de sus Recursos. Borre elementos y pruebe otra vez.
+date_picker_format=MM/dd/yyyy hh\:mm\:ss a
+internal_date_format=yyyyMMddhhmmssSSS
+subscribe=Subscibir\:
+current_date=Fecha/Hora de Publicaci\u00F3n Actual
+new=Nuevo
+required_prompt=Elementos requeridos marcados con un
+read=Leer
+close_paren=)
+delete_submit=Borrar
+feed_title=Podcast para
 options=Opciones
-options_directions1=Para proveer acceso a su podcast a traves de un
-options_directions2=escoja Mostar los no-miembros (visible p\u00FAblicamente). Para restringir el acceso al podcast de los participantes de su sitio y desactivar en acceso a trav\u00E9s de
-options_directions3=escoja Mostrar el Sitio.
+access=Acceso
+no_podcasts=No existen actualmente podcasts para esa ubicaci\u00F3n.
+current_file=Fichero actual
+nodate_alert=Alerta\: Tiene que introducir una fecha y una hora
+at=en
+permission_alert=No tiene permisos para borrar el fichero seleccionado.
+option_change_confirm=Los permisos del feed del Podcast han cambiado. Este feed ya no ed p\u00FAblico. Para dar acceso a los no participantes del feed del podcast, seleccione el enl\u00E1ce de Opciones de encima y seleccione el bot\u00F3n de radio al lado de la Vista de los no miembros (visible en p\u00FAblico).
+perm_directions=Escoja los permisos del Podcast en el sitio de trabajo
+file_to_upload=Fichero para subir
+id_unused_alert=La ID para el recurso no corresponde con un recurso v\u00E1lido. Por favor pruebe otra vez y si esto vuelve a ocurrir contante con el soporte.
+date_picker_format_string=(Formato\: MM/DD/YYYY HH\:MM AM/PM)
+email_prompt=Notificaci\u00F3n por Email
+download=Descargar
+nofile_alert=Alerta\: Debe escoger un fichero
+podcast_home_sub=Suscribase copiando la direcci\u00F3n del feed RSS y peg\u00E1ndola en sus favoritos
+podfeed_revise_url_caption=Direcci\u00F3n del RSS feed 
 options_public=Mostrar los no miembros (visible p\u00FAblicamente)
 options_site=Mostrar el sitio
+length_alert=La URL, incluyendo el nombre del fichero, no puede exceder de 254 caractertes. Para a\u00F1adir este podcast reduzca el contenido del nombre del fichero y pruebe otra vez
+delete=Borrar
+date_by_hand_format=MM/dd/yyyy hh\:mm a
 options_title=Opciones
-perm_directions=Escoja los permisos del Podcast en el sitio de trabajo
-perm_title=Permisos
-permission_alert=No tiene permisos para borrar el fichero seleccionado.
-permissions=Permisos
-podcast_home_sub=Suscribase copiando la direcci\u00F3n del feed RSS y peg\u00E1ndola en sus favoritos
-podcast_home_title=Podcasts
 podcatcher=podcatcher
-podfeed_author=Creado por Sakai
-podfeed_copyrighttext=Copyright 2007.
-podfeed_revise_directions=El t\u00EDtulo y la descripci\u00F3n del feed del podcast estar\u00E1 disponible por los participantes del sitio dentro del podcatcher. Actualize el formulario, entonces seleccione el bot\u00F3n apropiado.
-podfeed_revise_title=Editar el Feed del Podcast
-podfeed_revise_url_caption=Direcci\u00F3n del RSS feed 
+notitle=Debe introducir un t\u00EDtulo
 popup_text=Un podcatcher es un programa usado para descargar autom\u00E1ticamente los podcast. iTuenes tiene un podcatcher muy popular, pero no es el \u00FAnico software disponible para esto.
+cancel=Cancelar
 posted_by=Enviado por 
-publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
-quota_alert=Ha accedido el espacio de sus Recursos. Borre elementos y pruebe otra vez.
-read=Leer
-required_prompt=Elementos requeridos marcados con un
-revise=Editar
+id_used_alert=La ID del recurso ya est\u00E1 en uso. Por favor vuelva a intentarlo.
+no_access=No esta autorizado a ver esta herramienta. Contacte con su centro de soporte.
+podfeed_revise_directions=El t\u00EDtulo y la descripci\u00F3n del feed del podcast estar\u00E1 disponible por los participantes del sitio dentro del podcatcher. Actualize el formulario, entonces seleccione el bot\u00F3n apropiado.
+podfeed_author=Creado por Sakai
 revise_directions=Actualice el formulario, a continuaci\u00F3n escoja el bot\u00F3n apropiado
-revise_title=Editar el Podcast
-role=Rol
-spacer_bar=| 
-subscribe=Subscibir\:
-title_prompt=T\u00EDtulo
-max_size_exceeded_alert=\u00A1Atenci\u00F3n! El tama\u00F1o del fichero excede el l\u00EDmite de {0} MB.
-permission_directions = Establecer los permisos para la carpeta de Podcasts en el sitio de trabajo {0}
