--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_PT.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_pt_PT.properties
@@ -1,82 +1,82 @@
-#Stored by I18NEdit, may be edited!
-access=Access
-add=Criar
-add_directions=Complete o formul\u00E1rio e clique no bot\u00E3o apropriado bo fundo da p\u00E1gina.
-add_title=Criar Podcast
-at=em 
-cancel=Cancelar
-change_submit=Guardar altera\u00E7\u00F5es
-close_paren=)
-colon=\:
-current_date=Data de publica\u00E7\u00E3o actual
-current_file=Ficheiro actual
-date_by_hand_format=yyyy/MM/dd hh\:mm a
-date_picker_format=yyyy/MM/dd hh\:mm\:ss a
-date_picker_format_string=(Formato ANO/M\u00CAS/DIA hh\:mm AM/PM)
+#Thu Nov 18 07:50:23 CET 2010
+title_prompt=T\u00EDtulo
 date_prompt=Data de publica\u00E7\u00E3o
 del_confirm=Pretende remover o seguinte podcast?
-delete=Remover
-delete_submit=Remover
-delete_title=A remover Podcast...
-description_prompt=Descri\u00E7\u00E3o
-download=Descarregar
-email_prompt=Norifica\u00E7\u00E3o por correio electr\u00F3nico
+invalid_date_alert=A data tem de ser introduzida no seguinte formato\: ANO/M\u00CAS/DIA HH\:MM AM/PM
+internal_error_alert=Ocorreu um erro. Tente novamente.
+options_directions3=seleccione Vis\u00EDvel na \u00E1rea.
+options_directions2=seleccione Vis\u00EDvel ao p\u00FAblico. Para restringir os Podcasts aos participantes da \u00E1rea e desactivar o acesso atrav\u00E9s de um 
+options_directions1=Para dar acesso aos Podcasts atrav\u00E9s de um 
+change_submit=Guardar altera\u00E7\u00F5es
+notitle_alert=Aviso\: \u00C9 necess\u00E1rio introduzir um t\u00EDtulo
+publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
+podcast_home_title=Podcasts
+add=Criar
+spacer_bar=| 
+feed_desc2=\ Por favor volte frequentemente para actualiza\u00E7\u00F5es.
 feed_copyright=Copyright 2007 The Sakai Foundation. All rights reserved.
 feed_desc1=\ Podcast oficial.
-feed_desc2=\ Por favor volte frequentemente para actualiza\u00E7\u00F5es.
-feed_title=\: Podcast oficial
-file_prompt=Seleccione um ficheiro
-file_to_upload=Ficheiro a carregar
-id_invalid_alert=O ID do recurso \u00E9 inv\u00E1lido. Tente de novo e, caso se verifique novamente, contacte o Suporte.
-id_unused_alert=O ID do recurso n\u00E3o corresponde a um recurso v\u00E1lido. Tente de novo e, caso se verifique novamente, contacte o Suporte.
-id_used_alert=O ID do recurso j\u00E1 est\u00E1 em uso. Tente novamente.
-internal_date_format=yyyyMMddhhmmssSSS
-internal_error_alert=Ocorreu um erro. Tente novamente.
-invalid_date_alert=A data tem de ser introduzida no seguinte formato\: ANO/M\u00CAS/DIA HH\:MM AM/PM
-io_alert=Ocorreu um erro ao carregar o ficheiro. Por favor verifique o caminho e tente novamente.
-length_alert=O URL do Podcast, incluindo o nome do ficheiro, n\u00E3o pode exceder os 254 caracteres.
 maint=Maintain
-new=Criar
-no_access=N\u00E3o est\u00E1 autorizado a utilizar esta ferramenta. Contacte o Suporte para assist\u00EAncia.
-no_podcasts=N\u00E3o existem Podcasts.
+add_directions=Complete o formul\u00E1rio e clique no bot\u00E3o apropriado bo fundo da p\u00E1gina.
+max_size_exceeded_alert=Aviso\: O limite de {0} MB para o tamanho de ficheiros foi ultrapassado.
+add_title=Criar Podcast
+colon=\:
+permissions=Permiss\u00F5es
+io_alert=Ocorreu um erro ao carregar o ficheiro. Por favor verifique o caminho e tente novamente.
+id_invalid_alert=O ID do recurso \u00E9 inv\u00E1lido. Tente de novo e, caso se verifique novamente, contacte o Suporte.
+podfeed_copyrighttext=Copyright 2007.
+file_prompt=Seleccione um ficheiro
+perm_title=Permiss\u00F5es
+revise=Editar
 no_resource_alert=Para utilizar a ferramenta Podcasts, \u00E9 necess\u00E1rio addicionar primeiro a ferramenta {0}.
-nodate_alert=Aviso\: \u00C9 necess\u00E1rio introduzir uma data
-nofile_alert=Aviso\: Tem de seleccionar um ficheiro
-notitle=T\u00EDtulo n\u00E3o especificado
-notitle_alert=Aviso\: \u00C9 necess\u00E1rio introduzir um t\u00EDtulo
-on=em
 open_paren=(
-option_change_confirm=As permiss\u00F5es para a subscri\u00E7\u00E3o Podcast foram alteradas. Esta subscri\u00E7\u00E3o n\u00E3o est\u00E1 mais dispon\u00EDvel para o p\u00FAblico. Para n\u00E3o-participantes da \u00E1rea acederem \u00E0 subscri\u00E7\u00E3o, altere as Op\u00E7\u00F5es convenientemente.
+delete_title=A remover Podcast...
+on=em
+revise_title=Editar Podcast
+podfeed_revise_title=Editar Subscri\u00E7\u00E3o Podcast
+description_prompt=Descri\u00E7\u00E3o
+role=Perfil
+quota_alert=Excedeu a sua quota nos Recursos. Remova alguns itens e tente novamente.
+date_picker_format=yyyy/MM/dd hh\:mm\:ss a
+internal_date_format=yyyyMMddhhmmssSSS
+subscribe=Subscrever\:
+current_date=Data de publica\u00E7\u00E3o actual
+new=Criar
+required_prompt=Itens necess\u00E1rios marcados com uma 
+read=Ler
+close_paren=)
+delete_submit=Remover
+feed_title=\: Podcast oficial
 options=Op\u00E7\u00F5es
-options_directions1=Para dar acesso aos Podcasts atrav\u00E9s de um 
-options_directions2=seleccione Vis\u00EDvel ao p\u00FAblico. Para restringir os Podcasts aos participantes da \u00E1rea e desactivar o acesso atrav\u00E9s de um 
-options_directions3=seleccione Vis\u00EDvel na \u00E1rea.
+access=Access
+no_podcasts=N\u00E3o existem Podcasts.
+current_file=Ficheiro actual
+nodate_alert=Aviso\: \u00C9 necess\u00E1rio introduzir uma data
+at=em 
+permission_alert=N\u00E3o tem permiss\u00F5es para remover o ficheiro seleccionado.
+option_change_confirm=As permiss\u00F5es para a subscri\u00E7\u00E3o Podcast foram alteradas. Esta subscri\u00E7\u00E3o n\u00E3o est\u00E1 mais dispon\u00EDvel para o p\u00FAblico. Para n\u00E3o-participantes da \u00E1rea acederem \u00E0 subscri\u00E7\u00E3o, altere as Op\u00E7\u00F5es convenientemente.
+perm_directions=Modificar permiss\u00F5es para a ferramenta Podcasts na \u00E1rea 
+file_to_upload=Ficheiro a carregar
+id_unused_alert=O ID do recurso n\u00E3o corresponde a um recurso v\u00E1lido. Tente de novo e, caso se verifique novamente, contacte o Suporte.
+date_picker_format_string=(Formato ANO/M\u00CAS/DIA hh\:mm AM/PM)
+email_prompt=Norifica\u00E7\u00E3o por correio electr\u00F3nico
+download=Descarregar
+nofile_alert=Aviso\: Tem de seleccionar um ficheiro
+podcast_home_sub=Para subscrever copie o endere\u00E7o RSS e coloque-o no seu 
+podfeed_revise_url_caption=Endere\u00E7o do Podcast
 options_public=Vis\u00EDvel ao p\u00FAblico
 options_site=Vis\u00EDvel na \u00E1rea
+length_alert=O URL do Podcast, incluindo o nome do ficheiro, n\u00E3o pode exceder os 254 caracteres.
+delete=Remover
+date_by_hand_format=yyyy/MM/dd hh\:mm a
 options_title=Op\u00E7\u00F5es
-perm_directions=Modificar permiss\u00F5es para a ferramenta Podcasts na \u00E1rea 
-perm_title=Permiss\u00F5es
-permission_alert=N\u00E3o tem permiss\u00F5es para remover o ficheiro seleccionado.
-permissions=Permiss\u00F5es
-podcast_home_sub=Para subscrever copie o endere\u00E7o RSS e coloque-o no seu 
-podcast_home_title=Podcasts
 podcatcher=leitor de Podcasts
-podfeed_author=Criado por Sakai
-podfeed_copyrighttext=Copyright 2007.
-podfeed_revise_directions=O t\u00EDtulo e a descri\u00E7\u00E3o da subscri\u00E7\u00E3o Podcast estar\u00E3o dispon\u00EDveis para os participantes da \u00E1rea atrav\u00E9s dos seus leitores de Podcasts. Actualize o formul\u00E1rio e escolhe o bot\u00E3o apropriado no fundo da p\u00E1gina.
-podfeed_revise_title=Editar Subscri\u00E7\u00E3o Podcast
-podfeed_revise_url_caption=Endere\u00E7o do Podcast
+notitle=T\u00EDtulo n\u00E3o especificado
 popup_text=Um leitor de Podcasts \u00E9 um programa de computador utilizado para descarregar automaticamente Podcasts. O iTunes \u00E9 um leitor popular, mas n\u00E3o \u00E9 o \u00FAnico programa dispon\u00EDvel para o efeito.
+cancel=Cancelar
 posted_by=Publicado por 
-publish_date_format=EEEEEE',' dd MMMMM yyyy hh\:mm a z
-quota_alert=Excedeu a sua quota nos Recursos. Remova alguns itens e tente novamente.
-read=Ler
-required_prompt=Itens necess\u00E1rios marcados com uma 
-revise=Editar
+id_used_alert=O ID do recurso j\u00E1 est\u00E1 em uso. Tente novamente.
+no_access=N\u00E3o est\u00E1 autorizado a utilizar esta ferramenta. Contacte o Suporte para assist\u00EAncia.
+podfeed_revise_directions=O t\u00EDtulo e a descri\u00E7\u00E3o da subscri\u00E7\u00E3o Podcast estar\u00E3o dispon\u00EDveis para os participantes da \u00E1rea atrav\u00E9s dos seus leitores de Podcasts. Actualize o formul\u00E1rio e escolhe o bot\u00E3o apropriado no fundo da p\u00E1gina.
+podfeed_author=Criado por Sakai
 revise_directions=Actualize o formul\u00E1rio  e escolha o bot\u00E3o apropriado no fundo da p\u00E1gina.
-revise_title=Editar Podcast
-role=Perfil
-spacer_bar=| 
-subscribe=Subscrever\:
-title_prompt=T\u00EDtulo
-max_size_exceeded_alert=Aviso: O limite de {0} MB para o tamanho de ficheiros foi ultrapassado.
