--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_sv.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_sv.properties
@@ -1,82 +1,82 @@
-#Stored by I18NEdit, may be edited!
-access=Tilltr\u00E4de
-add=L\u00E4gg till
-add_directions=Fyll i formul\u00E4ret och v\u00E4lj sedan passande knapp nedan. 
-add_title=L\u00E4gg till podcast
-at=p\u00E5 
-cancel=Avbryt
-change_submit=Spara
-close_paren=)
-colon=\: 
-current_date=Publiceringsdatum och -tid
-current_file=Nuvarande fil
-date_by_hand_format=dd-MMMMM-yyyy hh\:mm\:ss
-date_picker_format=dd-MMMMM-yyyy hh\:mm\:ss
-date_picker_format_string=(Format\: DD-MMMMM-YYYY HH\:MM\:SS)
+#Thu Nov 18 07:23:00 CET 2010
+title_prompt=Rubrik
 date_prompt=Ange publiceringsdatum och tid
 del_confirm=\u00C4r du s\u00E4ker p\u00E5 att du vill ta bort f\u00F6ljande podcast?
-delete=Ta bort
-delete_submit=Ta bort
-delete_title=Tar bort podcast...
-description_prompt=Beskrivning
-download=Ladda ned
-email_prompt=Notifiering med e-post
+invalid_date_alert=Du m\u00E5ste anv\u00E4nda f\u00F6ljande datum-format\: DD-MMMMM-YYYY HH\:MM\:SS
+internal_error_alert=Ett internt fel intr\u00E4ffade, f\u00F6rs\u00F6k igen.
+options_directions3=v\u00E4lj 'Visa f\u00F6r sajt'.
+options_directions2=v\u00E4lj 'Visa f\u00F6r icke-deltagare (publikt synlig)' . Om du vill att enbart sajtens deltagare ska ha tillg\u00E5ng till dina podcasts och d\u00E4rmed f\u00F6rhindra tillg\u00E5ng genom en
+options_directions1=F\u00F6r att ge tillg\u00E5ng till dina podcasts genom en 
+change_submit=Spara
+notitle_alert=Observera\: Du m\u00E5ste ange en rubrik
+publish_date_format=EEEEEE',' yyyy MMMMM dd hh\:mm
+podcast_home_title=Podcasts
+add=L\u00E4gg till
+spacer_bar=| 
+feed_desc2=. Kolla efter uppdateringar h\u00E4r under terminen. 
 feed_copyright=Copyright 2006 The Trustees of Indiana University. All rights reserved.
 feed_desc1=Detta \u00E4r en podcast f\u00F6r kursen
-feed_desc2=. Kolla efter uppdateringar h\u00E4r under terminen. 
-feed_title=Podcast f\u00F6r
-file_prompt=V\u00E4lj en fil 
-file_to_upload=Fil att ladda upp
-id_invalid_alert=Resursen \u00E4r ej giltig. F\u00F6rs\u00F6k igen och om felet best\u00E5r, kontakta support.
-id_unused_alert=Id\:et f\u00F6r resursen \u00F6verensst\u00E4mmer ej med en giltig resurs. F\u00F6rs\u00F6k igen och om felet best\u00E5r, kontakta support.
-id_used_alert=Id\:et f\u00F6r resursen anv\u00E4nds redan. F\u00F6rs\u00F6k igen.
-internal_date_format=yyyyMMMMMddHHmmssSSS
-internal_error_alert=Ett internt fel intr\u00E4ffade, f\u00F6rs\u00F6k igen.
-invalid_date_alert=Du m\u00E5ste anv\u00E4nda f\u00F6ljande datum-format\: DD-MMMMM-YYYY HH\:MM\:SS
-io_alert=Ett fel intr\u00E4ffade vid filuppladdningen. Kontrollera s\u00F6kv\u00E4gen eller v\u00E4lj filen p\u00E5 nytt och f\u00F6rs\u00F6k igen.
-length_alert=URL\:en till podcast\:en, inkluderande filnamnet, kan inte \u00F6verstiga 254 tecken. F\u00F6r att l\u00E4gga till denna podcast, reducera filens namn och f\u00F6rs\u00F6k p\u00E5 nytt.
 maint=Maintain
+add_directions=Fyll i formul\u00E4ret och v\u00E4lj sedan passande knapp nedan. 
 max_size_exceeded_alert=Varning\: Maxuppladdningsgr\u00E4nsen p\u00E5 {0} MB har \u00F6vertr\u00E4dits.
-new=Ny
-no_access=Du har inte till\u00E5telse att se detta verktyg. Kontakta din l\u00E4rare eller support f\u00F6r hj\u00E4lp.
-no_podcasts=Det finns f\u00F6r n\u00E4rvarande inga podcasts h\u00E4r.
+add_title=L\u00E4gg till podcast
+colon=\: 
+permissions=Beh\u00F6righeter
+io_alert=Ett fel intr\u00E4ffade vid filuppladdningen. Kontrollera s\u00F6kv\u00E4gen eller v\u00E4lj filen p\u00E5 nytt och f\u00F6rs\u00F6k igen.
+id_invalid_alert=Resursen \u00E4r ej giltig. F\u00F6rs\u00F6k igen och om felet best\u00E5r, kontakta support.
+podfeed_copyrighttext=Copyright 2008.
+file_prompt=V\u00E4lj en fil 
+perm_title=Beh\u00F6righeter
+revise=Redigera
 no_resource_alert=F\u00F6r att kunna anv\u00E4nda postcast-verktyget s\u00E5 m\u00E5ste du f\u00F6rst l\u00E4gga till verktyget {0} p\u00E5 sajten.
-nodate_alert=Observera\: Du m\u00E5ste ange ett datum och tid.
-nofile_alert=Observera\: Du m\u00E5ste v\u00E4lja en fil.
-notitle=Du m\u00E5ste ange en rubrik
-notitle_alert=Observera\: Du m\u00E5ste ange en rubrik
-on=p\u00E5
 open_paren=(
-option_change_confirm=Inst\u00E4llningen f\u00F6r podcast-foldern i Resources/Fillagring har \u00E4ndrats. Foldern \u00E4r inte l\u00E4ngre publikt tillg\u00E4nglig. F\u00F6r att icke-deltagare p\u00E5 sajten skall kunna ta del av podcasten, v\u00E4lj 'Inst\u00E4llningar' intill foldern Podcasts och markera rutan 'Visa f\u00F6r icke-deltagare (publikt synlig)'.
+delete_title=Tar bort podcast...
+on=p\u00E5
+revise_title=Redigera podcast
+podfeed_revise_title=Modifiera podcast-fl\u00F6det
+description_prompt=Beskrivning
+role=Roll
+quota_alert=Du har \u00F6verskridit din kvota i Resources/Fillagring.  Ta bort n\u00E5gra filer och f\u00F6rs\u00F6k igen.
+date_picker_format=dd-MMMMM-yyyy hh\:mm\:ss
+internal_date_format=yyyyMMMMMddHHmmssSSS
+subscribe=Prenumerera\:
+current_date=Publiceringsdatum och -tid
+new=Ny
+required_prompt=Obligatoriska f\u00E4lt \u00E4r markerade med en 
+read=L\u00E4s
+close_paren=)
+delete_submit=Ta bort
+feed_title=Podcast f\u00F6r
 options=Inst\u00E4llningar
-options_directions1=F\u00F6r att ge tillg\u00E5ng till dina podcasts genom en 
-options_directions2=v\u00E4lj 'Visa f\u00F6r icke-deltagare (publikt synlig)' . Om du vill att enbart sajtens deltagare ska ha tillg\u00E5ng till dina podcasts och d\u00E4rmed f\u00F6rhindra tillg\u00E5ng genom en
-options_directions3=v\u00E4lj 'Visa f\u00F6r sajt'.
+access=Tilltr\u00E4de
+no_podcasts=Det finns f\u00F6r n\u00E4rvarande inga podcasts h\u00E4r.
+current_file=Nuvarande fil
+nodate_alert=Observera\: Du m\u00E5ste ange ett datum och tid.
+at=p\u00E5 
+permission_alert=Du har inte beh\u00F6righet att ta bort den valda filen.
+option_change_confirm=Inst\u00E4llningen f\u00F6r podcast-foldern i Resources/Fillagring har \u00E4ndrats. Foldern \u00E4r inte l\u00E4ngre publikt tillg\u00E4nglig. F\u00F6r att icke-deltagare p\u00E5 sajten skall kunna ta del av podcasten, v\u00E4lj 'Inst\u00E4llningar' intill foldern Podcasts och markera rutan 'Visa f\u00F6r icke-deltagare (publikt synlig)'.
+perm_directions=S\u00E4tt beh\u00F6righeter f\u00F6r podcasts p\u00E5 sajten 
+file_to_upload=Fil att ladda upp
+id_unused_alert=Id\:et f\u00F6r resursen \u00F6verensst\u00E4mmer ej med en giltig resurs. F\u00F6rs\u00F6k igen och om felet best\u00E5r, kontakta support.
+date_picker_format_string=(Format\: DD-MMMMM-YYYY HH\:MM\:SS)
+email_prompt=Notifiering med e-post
+download=Ladda ned
+nofile_alert=Observera\: Du m\u00E5ste v\u00E4lja en fil.
+podcast_home_sub=Prenumerera genom att kopiera adressen till detta RSS-fl\u00F6de och klistra in i din 
+podfeed_revise_url_caption=RSS-fl\u00F6dets adress
 options_public=Visa f\u00F6r icke-deltagare (publikt synlig)
 options_site=Visa p\u00E5 sajt
+length_alert=URL\:en till podcast\:en, inkluderande filnamnet, kan inte \u00F6verstiga 254 tecken. F\u00F6r att l\u00E4gga till denna podcast, reducera filens namn och f\u00F6rs\u00F6k p\u00E5 nytt.
+delete=Ta bort
+date_by_hand_format=dd-MMMMM-yyyy hh\:mm\:ss
 options_title=Inst\u00E4llningar
-perm_directions=S\u00E4tt beh\u00F6righeter f\u00F6r podcasts p\u00E5 sajten 
-perm_title=Beh\u00F6righeter
-permission_alert=Du har inte beh\u00F6righet att ta bort den valda filen.
-permissions=Beh\u00F6righeter
-podcast_home_sub=Prenumerera genom att kopiera adressen till detta RSS-fl\u00F6de och klistra in i din 
-podcast_home_title=Podcasts
 podcatcher=podd-l\u00E4sare
-podfeed_author=Skapad av Sakai
-podfeed_copyrighttext=Copyright 2008.
-podfeed_revise_directions=Rubriken och podcastens beskrivningen kommer att synas i deltagarnas podd-l\u00E4sare.
-podfeed_revise_title=Modifiera podcast-fl\u00F6det
-podfeed_revise_url_caption=RSS-fl\u00F6dets adress
+notitle=Du m\u00E5ste ange en rubrik
 popup_text=En podd-l\u00E4sare \u00E4r ett datorprogram d\u00E4r man prenumererar p\u00E5 podcasts och som automatiskt laddar ned dessa. iTunes \u00E4r en popul\u00E4r podd-l\u00E4sare, men \u00E4r inte den enda mjukvaran f\u00F6r detta \u00E4ndam\u00E5l.
+cancel=Avbryt
 posted_by=Postat av 
-publish_date_format=EEEEEE',' yyyy MMMMM dd hh\:mm
-quota_alert=Du har \u00F6verskridit din kvota i Resources/Fillagring.  Ta bort n\u00E5gra filer och f\u00F6rs\u00F6k igen.
-read=L\u00E4s
-required_prompt=Obligatoriska f\u00E4lt \u00E4r markerade med en 
-revise=Redigera
+id_used_alert=Id\:et f\u00F6r resursen anv\u00E4nds redan. F\u00F6rs\u00F6k igen.
+no_access=Du har inte till\u00E5telse att se detta verktyg. Kontakta din l\u00E4rare eller support f\u00F6r hj\u00E4lp.
+podfeed_revise_directions=Rubriken och podcastens beskrivningen kommer att synas i deltagarnas podd-l\u00E4sare.
+podfeed_author=Skapad av Sakai
 revise_directions=Uppdatera formul\u00E4ret och v\u00E4lj sedan passande knapp nedan.
-revise_title=Redigera podcast
-role=Roll
-spacer_bar=| 
-subscribe=Prenumerera\:
-title_prompt=Rubrik
