--- a/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_zh_TW.properties
+++ b/podcasts-api/src/bundle/org/sakaiproject/api/podcasts/bundle/Messages_zh_TW.properties
@@ -1,94 +1,79 @@
-
-#
-# Copyright (c) 2009 Sakai Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.osedu.org/licenses/ECL-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# 
-podcast_home_title = \u64ad\u5ba2 
-podcast_home_sub = \u5982\u9700\u7acb\u5373\u8a02\u95b1\uff0c\u8acb\u901a\u904e\u8907\u88fd\u9019\u500b RSS \u6458\u8981\u5730\u5740\u8cbc\u5165\u60a8\u559c\u611b\u7684 
-podcatcher = \u64ad\u5ba2\u64ad\u653e\u5668 
-feed_title = \u7684\u5b98\u65b9\u64ad\u5ba2\u3002 
-feed_desc1 = \u5b98\u65b9\u64ad\u5ba2\u3002 
-feed_desc2 = \u8acb\u5728\u5b78\u671f\u671f\u9593\u6aa2\u67e5\u66f4\u65b0\u3002  
-feed_copyright = \u6cd5\u653f\u5927\u5b78\u3000\u7248\u6b0a\u6240\u6709\u00a9 2008 Hosei University. All Rights Reserved. 
-no_podcasts = \u672c\u5340\u76ee\u524d\u7121\u64ad\u5ba2\u3002 
-no_access = \u60a8\u7121\u6b0a\u6aa2\u8996\u6b64\u5de5\u5177\u3002\u806f\u7d61\u60a8\u7576\u5730\u7684\u652f\u63f4\u4e2d\u5fc3\u63d0\u4f9b\u63f4\u52a9\u3002 
-posted_by = \u767c\u4f48\u4eba\uff1a 
-access = \u5b58\u53d6 
-add = \u65b0\u589e 
-at = \u65bc 
-cancel = \u53d6\u6d88 
-colon = \uff1a 
-delete = \u522a\u9664 
-download = \u4e0b\u8f09 
-maint = \u7dad\u8b77 
-new = \u65b0\u898f 
-on = \u5728 
-options = \u9078\u9805 
-permissions = \u6b0a\u9650 
-read = \u8b80\u53d6 
-revise = \u7de8\u8f2f 
-role = \u89d2\u8272 
-subscribe = \u8a02\u95b1\uff1a 
-close_paren = \ufe5a 
-open_paren = \ufe59 
-date_picker_format = MM/dd/yyyy hh\:mm\:ss a 
-date_by_hand_format = MM/dd/yyyy hh\:mm a 
-date_picker_format_string = (\u683c\u5f0f\uff1a MM/DD/YYYY HH\:MM AM/PM) 
-popup_text = podcatcher \u662f\u96fb\u8166\u7a0b\u5f0f\u7528\u4f86\u81ea\u52d5\u5730\u4e0b\u8f09 podcasts \u3002iTunes \u662f\u4e00\u53d7\u6b61\u8fce\u7684 podcatcher, \u4f46\u4e0d\u662f\u552f\u4e00\u7684\u8edf\u9ad4\u53ef\u4f5c\u6b64\u7528\u9014\u3002 
-current_file = \u76ee\u524d\u7684\u6a94\u6848 
-current_date = \u76ee\u524d\u516c\u958b\u65e5\u671f\uff0f\u6642\u9593 
-required_prompt = \u5fc5\u586b\u7684\u9805\u76ee\u6a19\u6709\u8a18\u865f\u6a19\u8a8c 
-file_prompt = \u9078\u64c7\u6a94\u6848 
-date_prompt = \u516c\u958b\u65e5\u671f\uff0f\u6642\u9593 
-title_prompt = \u6a19\u984c 
-change_submit = \u5132\u5b58\u66f4\u6539 
-file_to_upload = \u4e0a\u8f09\u6a94\u6848 
-add_title = \u65b0\u589e\u64ad\u5ba2 
-add_directions = \u8acb\u5148\u586b\u59a5\u8868\u55ae\uff0c\u7136\u5f8c\u5728\u5e95\u90e8\u9078\u64c7\u9069\u7576\u7684\u6309\u9215\u3002 
-description_prompt = \u63cf\u8ff0 
-email_prompt = \u96fb\u5b50\u90f5\u4ef6\u901a\u77e5  
-delete_title = \u522a\u9664\u64ad\u5ba2\u4e2d\u2026 
-delete_submit = \u522a\u9664 
-del_confirm = \u60a8\u662f\u5426\u78ba\u5b9a\u8981\u522a\u9664\u4ee5\u4e0b\u64ad\u5ba2\uff1f 
-revise_title = \u7de8\u8f2f\u64ad\u5ba2 
-revise_directions = \u66f4\u65b0\u8868\u683c\uff0c\u7136\u5f8c\u5728\u5e95\u90e8\u9078\u64c7\u9069\u7576\u7684\u6309\u9215\u3002 
-perm_title = \u6b0a\u9650 
-perm_directions = \u7d66\u5de5\u4f5c\u7db2\u7ad9\u7684\u64ad\u5ba2\u8a2d\u5b9a\u6b0a\u9650 
-options_title = \u9078\u9805 
-options_directions1 = \u5982\u9700\u70ba\u60a8\u7684\u64ad\u5ba2\u63d0\u4f9b\u5b58\u53d6\u901a\u904e 
-options_directions2 = \u9078\u64c7\u986f\u793a\u7d66\u975e\u6210\u54e1\ufe59\u516c\u958b\u5730\u53ef\u4f7f\u7528\ufe5a\u3002\u9650\u5236\u60a8\u7db2\u7ad9\u7684\u53c3\u8207\u8005\u5b58\u53d6\u60a8\u7684\u64ad\u5ba2\u4e26\u901a\u904e\u505c\u7528\u5b58\u53d6 
-options_directions3 = \u9078\u64c7\u986f\u793a\u7d66\u7db2\u7ad9\u3002 
-options_public = \u5411\u975e\u6210\u54e1\u986f\u793a\uff08\u53ef\u516c\u958b\u6aa2\u8996\uff09 
-options_site = \u5411\u7db2\u7ad9\u986f\u793a 
-option_change_confirm = \u64ad\u5ba2\u6458\u8981\u7684\u6b0a\u9650\u5df2\u66f4\u6539\u3002\u6b64\u6458\u8981\u4e0d\u518d\u662f\u516c\u958b\u53ef\u898b\u7684\u3002\u5c0d\u65bc\u975e\u53c3\u8207\u8005\u5728\u6b64\u7db2\u7ad9\u5b58\u53d6\u64ad\u5ba2\u6458\u8981\uff0c\u9078\u64c7\u4e0a\u9762\u9078\u9805\u9023\u7d50\uff0c\u4e26\u9078\u64c7\u65c1\u908a\u7684\u9078\u9805\u6309\u9215\u4f86\u986f\u793a\u7d66\u975e\u6210\u54e1\uff08\u516c\u958b\u53ef\u898b\u7684\uff09 \u3002 
-no_resource_alert = \u5982\u9700\u4f7f\u7528\u64ad\u5ba2\u7684\u5de5\u5177\uff0c\u60a8\u5fc5\u9808\u5148\u52a0\u5165 {0} \u5de5\u5177\u3002 
-nofile_alert = \u8b66\u793a\uff1a\u60a8\u5fc5\u9808\u9078\u64c7\u4e00\u500b\u6a94\u6848 
-nodate_alert = \u8b66\u793a\uff1a\u60a8\u5fc5\u9808\u8f38\u5165\u65e5\u671f\u548c\u6642\u9593 
-notitle_alert = \u8b66\u793a\uff1a\u60a8\u5fc5\u9808\u8f38\u5165\u6a19\u984c 
-notitle = \u60a8\u5fc5\u9808\u8f38\u5165\u6a19\u984c 
-length_alert = \u64ad\u5ba2URL\uff0c\u5305\u62ec\u6a94\u6848\u540d\uff0c\u4e0d\u53ef\u904e254\u82f1\u6587\u5b57\u5143\u3002\u8981\u6210\u529f\u5730\u65b0\u589e\u6b64\u64ad\u5ba2\uff0c\u6e1b\u5c11\u6a94\u6848\u540d\u7684\u9577\u5ea6\u7136\u5f8c\u91cd\u8a66\u3002 
-quota_alert = \u60a8\u5df2\u7d93\u8d85\u904e\u8cc7\u6e90\u914d\u984d\u3002\u522a\u9664\u9805\u76ee\uff0c\u7136\u5f8c\u518d\u8a66\u4e00\u6b21\u3002 
-max_size_exceeded_alert = \u8b66\u793a\uff1a{0} MB \u4e0a\u8f09\u4e0a\u9650\u5df2\u8d85\u904e\u3002 
-permission_alert = \u60a8\u7121\u6b0a\u522a\u9664\u6240\u9078\u7684\u6a94\u6848\u3002 
-internal_error_alert = \u4e00\u500b\u5167\u90e8\u932f\u8aa4\u9632\u6b62\u4e86\u60a8\u7684\u8981\u5b8c\u6210\u7684\u64cd\u4f5c\u3002\u8acb\u518d\u5617\u8a66\u3002 
-id_unused_alert = \u8a72\u8cc7\u6e90 ID \u4e0d\u7b26\u5408\u6709\u6548\u7684\u8cc7\u6e90\u3002\u8acb\u518d\u8a66\u4e00\u6b21\uff0c\u5982\u679c\u9019\u500b\u4ecd\u91cd\u65b0\u51fa\u73fe\uff0c\u8acb\u806f\u7d61\u652f\u63f4\u5e6b\u52a9\u89e3\u6c7a\u3002 
-id_invalid_alert = \u8a72\u8cc7\u6e90 ID \u662f\u7121\u6548\u7684\u8cc7\u6e90\u3002\u8acb\u518d\u8a66\u4e00\u6b21\uff0c\u5982\u679c\u4ecd\u91cd\u65b0\u51fa\u73fe\uff0c\u8acb\u806f\u7d61\u652f\u63f4\u5e6b\u52a9\u89e3\u6c7a\u3002 
-io_alert = \u4e0a\u8f09\u60a8\u7684\u6a94\u6848\u51fa\u73fe\u554f\u984c\u3002\u8acb\u6aa2\u67e5\u8def\u5f91\u540d\u7a31\uff0c\u6216\u91cd\u65b0\u9078\u64c7\uff0c\u7136\u5f8c\u518d\u8a66\u4e00\u6b21\u3002 
-id_used_alert = \u8a72\u8cc7\u6e90 ID \u5df2\u5728\u4f7f\u7528\u4e2d\u3002\u8acb\u91cd\u8a66\u3002 
-invalid_date_alert = \u60a8\u5fc5\u9808\u8f38\u5165\u5982\u4e0b\u7684\u65e5\u671f\u683c\u5f0f\uff1aMM/DD/YYYY HH\:MM AM/PM 
-podfeed_revise_title = \u7de8\u8f2f\u64ad\u5ba2\u6458\u8981 
-podfeed_revise_directions = \u64ad\u5ba2\u6458\u8981\u7684\u6a19\u984c\u548c\u63cf\u8ff0\u5c07\u5728\u7db2\u7ad9\u53c3\u8207\u8005\u7684\u64ad\u5ba2\u64ad\u653e\u5668\u4e2d\u63d0\u4f9b\u7d66\u4ed6\u5011 \u3002\u66f4\u65b0\u8868\u55ae\uff0c\u7136\u5f8c\u5728\u5e95\u90e8\u9078\u64c7\u9069\u7576\u7684\u6309\u9215\u3002 
-podfeed_revise_url_caption = RSS \u6458\u8981\u5730\u5740 
-podfeed_author = \u7531 Sakai \u5efa\u7acb 
-podfeed_copyrighttext = Copyright 2007. 
+#Thu Nov 18 07:53:06 CET 2010
+title_prompt=\u6A19\u984C 
+date_prompt=\u516C\u958B\u65E5\u671F\uFF0F\u6642\u9593 
+invalid_date_alert=\u60A8\u5FC5\u9808\u8F38\u5165\u5982\u4E0B\u7684\u65E5\u671F\u683C\u5F0F\uFF1AMM/DD/YYYY HH\:MM AM/PM 
+del_confirm=\u60A8\u662F\u5426\u78BA\u5B9A\u8981\u522A\u9664\u4EE5\u4E0B\u64AD\u5BA2\uFF1F 
+internal_error_alert=\u4E00\u500B\u5167\u90E8\u932F\u8AA4\u9632\u6B62\u4E86\u60A8\u7684\u8981\u5B8C\u6210\u7684\u64CD\u4F5C\u3002\u8ACB\u518D\u5617\u8A66\u3002 
+options_directions3=\u9078\u64C7\u986F\u793A\u7D66\u7DB2\u7AD9\u3002 
+options_directions2=\u9078\u64C7\u986F\u793A\u7D66\u975E\u6210\u54E1\uFE59\u516C\u958B\u5730\u53EF\u4F7F\u7528\uFE5A\u3002\u9650\u5236\u60A8\u7DB2\u7AD9\u7684\u53C3\u8207\u8005\u5B58\u53D6\u60A8\u7684\u64AD\u5BA2\u4E26\u901A\u904E\u505C\u7528\u5B58\u53D6 
+options_directions1=\u5982\u9700\u70BA\u60A8\u7684\u64AD\u5BA2\u63D0\u4F9B\u5B58\u53D6\u901A\u904E 
+change_submit=\u5132\u5B58\u66F4\u6539 
+notitle_alert=\u8B66\u793A\uFF1A\u60A8\u5FC5\u9808\u8F38\u5165\u6A19\u984C 
+podcast_home_title=\u64AD\u5BA2 
+add=\u65B0\u589E 
+feed_desc2=\u8ACB\u5728\u5B78\u671F\u671F\u9593\u6AA2\u67E5\u66F4\u65B0\u3002  
+feed_copyright=\u6CD5\u653F\u5927\u5B78\u3000\u7248\u6B0A\u6240\u6709\u00A9 2008 Hosei University. All Rights Reserved. 
+feed_desc1=\u5B98\u65B9\u64AD\u5BA2\u3002 
+maint=\u7DAD\u8B77 
+add_directions=\u8ACB\u5148\u586B\u59A5\u8868\u55AE\uFF0C\u7136\u5F8C\u5728\u5E95\u90E8\u9078\u64C7\u9069\u7576\u7684\u6309\u9215\u3002 
+max_size_exceeded_alert=\u8B66\u793A\uFF1A{0} MB \u4E0A\u8F09\u4E0A\u9650\u5DF2\u8D85\u904E\u3002 
+add_title=\u65B0\u589E\u64AD\u5BA2 
+colon=\uFF1A 
+permissions=\u6B0A\u9650 
+io_alert=\u4E0A\u8F09\u60A8\u7684\u6A94\u6848\u51FA\u73FE\u554F\u984C\u3002\u8ACB\u6AA2\u67E5\u8DEF\u5F91\u540D\u7A31\uFF0C\u6216\u91CD\u65B0\u9078\u64C7\uFF0C\u7136\u5F8C\u518D\u8A66\u4E00\u6B21\u3002 
+id_invalid_alert=\u8A72\u8CC7\u6E90 ID \u662F\u7121\u6548\u7684\u8CC7\u6E90\u3002\u8ACB\u518D\u8A66\u4E00\u6B21\uFF0C\u5982\u679C\u4ECD\u91CD\u65B0\u51FA\u73FE\uFF0C\u8ACB\u806F\u7D61\u652F\u63F4\u5E6B\u52A9\u89E3\u6C7A\u3002 
+podfeed_copyrighttext=Copyright 2007. 
+file_prompt=\u9078\u64C7\u6A94\u6848 
+perm_title=\u6B0A\u9650 
+revise=\u7DE8\u8F2F 
+no_resource_alert=\u5982\u9700\u4F7F\u7528\u64AD\u5BA2\u7684\u5DE5\u5177\uFF0C\u60A8\u5FC5\u9808\u5148\u52A0\u5165 {0} \u5DE5\u5177\u3002 
+open_paren=\uFE59 
+delete_title=\u522A\u9664\u64AD\u5BA2\u4E2D\u2026 
+on=\u5728 
+revise_title=\u7DE8\u8F2F\u64AD\u5BA2 
+podfeed_revise_title=\u7DE8\u8F2F\u64AD\u5BA2\u6458\u8981 
+description_prompt=\u63CF\u8FF0 
+role=\u89D2\u8272 
+quota_alert=\u60A8\u5DF2\u7D93\u8D85\u904E\u8CC7\u6E90\u914D\u984D\u3002\u522A\u9664\u9805\u76EE\uFF0C\u7136\u5F8C\u518D\u8A66\u4E00\u6B21\u3002 
+date_picker_format=MM/dd/yyyy hh\:mm\:ss a 
+subscribe=\u8A02\u95B1\uFF1A 
+current_date=\u76EE\u524D\u516C\u958B\u65E5\u671F\uFF0F\u6642\u9593 
+new=\u65B0\u898F 
+read=\u8B80\u53D6 
+required_prompt=\u5FC5\u586B\u7684\u9805\u76EE\u6A19\u6709\u8A18\u865F\u6A19\u8A8C 
+close_paren=\uFE5A 
+delete_submit=\u522A\u9664 
+feed_title=\u7684\u5B98\u65B9\u64AD\u5BA2\u3002 
+options=\u9078\u9805 
+access=\u5B58\u53D6 
+no_podcasts=\u672C\u5340\u76EE\u524D\u7121\u64AD\u5BA2\u3002 
+current_file=\u76EE\u524D\u7684\u6A94\u6848 
+nodate_alert=\u8B66\u793A\uFF1A\u60A8\u5FC5\u9808\u8F38\u5165\u65E5\u671F\u548C\u6642\u9593 
+at=\u65BC 
+permission_alert=\u60A8\u7121\u6B0A\u522A\u9664\u6240\u9078\u7684\u6A94\u6848\u3002 
+option_change_confirm=\u64AD\u5BA2\u6458\u8981\u7684\u6B0A\u9650\u5DF2\u66F4\u6539\u3002\u6B64\u6458\u8981\u4E0D\u518D\u662F\u516C\u958B\u53EF\u898B\u7684\u3002\u5C0D\u65BC\u975E\u53C3\u8207\u8005\u5728\u6B64\u7DB2\u7AD9\u5B58\u53D6\u64AD\u5BA2\u6458\u8981\uFF0C\u9078\u64C7\u4E0A\u9762\u9078\u9805\u9023\u7D50\uFF0C\u4E26\u9078\u64C7\u65C1\u908A\u7684\u9078\u9805\u6309\u9215\u4F86\u986F\u793A\u7D66\u975E\u6210\u54E1\uFF08\u516C\u958B\u53EF\u898B\u7684\uFF09 \u3002 
+perm_directions=\u7D66\u5DE5\u4F5C\u7DB2\u7AD9\u7684\u64AD\u5BA2\u8A2D\u5B9A\u6B0A\u9650 
+file_to_upload=\u4E0A\u8F09\u6A94\u6848 
+id_unused_alert=\u8A72\u8CC7\u6E90 ID \u4E0D\u7B26\u5408\u6709\u6548\u7684\u8CC7\u6E90\u3002\u8ACB\u518D\u8A66\u4E00\u6B21\uFF0C\u5982\u679C\u9019\u500B\u4ECD\u91CD\u65B0\u51FA\u73FE\uFF0C\u8ACB\u806F\u7D61\u652F\u63F4\u5E6B\u52A9\u89E3\u6C7A\u3002 
+date_picker_format_string=(\u683C\u5F0F\uFF1A MM/DD/YYYY HH\:MM AM/PM) 
+email_prompt=\u96FB\u5B50\u90F5\u4EF6\u901A\u77E5  
+download=\u4E0B\u8F09 
+nofile_alert=\u8B66\u793A\uFF1A\u60A8\u5FC5\u9808\u9078\u64C7\u4E00\u500B\u6A94\u6848 
+podcast_home_sub=\u5982\u9700\u7ACB\u5373\u8A02\u95B1\uFF0C\u8ACB\u901A\u904E\u8907\u88FD\u9019\u500B RSS \u6458\u8981\u5730\u5740\u8CBC\u5165\u60A8\u559C\u611B\u7684 
+podfeed_revise_url_caption=RSS \u6458\u8981\u5730\u5740 
+options_public=\u5411\u975E\u6210\u54E1\u986F\u793A\uFF08\u53EF\u516C\u958B\u6AA2\u8996\uFF09 
+options_site=\u5411\u7DB2\u7AD9\u986F\u793A 
+length_alert=\u64AD\u5BA2URL\uFF0C\u5305\u62EC\u6A94\u6848\u540D\uFF0C\u4E0D\u53EF\u904E254\u82F1\u6587\u5B57\u5143\u3002\u8981\u6210\u529F\u5730\u65B0\u589E\u6B64\u64AD\u5BA2\uFF0C\u6E1B\u5C11\u6A94\u6848\u540D\u7684\u9577\u5EA6\u7136\u5F8C\u91CD\u8A66\u3002 
+delete=\u522A\u9664 
+date_by_hand_format=MM/dd/yyyy hh\:mm a 
+options_title=\u9078\u9805 
+podcatcher=\u64AD\u5BA2\u64AD\u653E\u5668 
+notitle=\u60A8\u5FC5\u9808\u8F38\u5165\u6A19\u984C 
+popup_text=podcatcher \u662F\u96FB\u8166\u7A0B\u5F0F\u7528\u4F86\u81EA\u52D5\u5730\u4E0B\u8F09 podcasts \u3002iTunes \u662F\u4E00\u53D7\u6B61\u8FCE\u7684 podcatcher, \u4F46\u4E0D\u662F\u552F\u4E00\u7684\u8EDF\u9AD4\u53EF\u4F5C\u6B64\u7528\u9014\u3002 
+cancel=\u53D6\u6D88 
+posted_by=\u767C\u4F48\u4EBA\uFF1A 
+id_used_alert=\u8A72\u8CC7\u6E90 ID \u5DF2\u5728\u4F7F\u7528\u4E2D\u3002\u8ACB\u91CD\u8A66\u3002 
+no_access=\u60A8\u7121\u6B0A\u6AA2\u8996\u6B64\u5DE5\u5177\u3002\u806F\u7D61\u60A8\u7576\u5730\u7684\u652F\u63F4\u4E2D\u5FC3\u63D0\u4F9B\u63F4\u52A9\u3002 
+podfeed_author=\u7531 Sakai \u5EFA\u7ACB 
+podfeed_revise_directions=\u64AD\u5BA2\u6458\u8981\u7684\u6A19\u984C\u548C\u63CF\u8FF0\u5C07\u5728\u7DB2\u7AD9\u53C3\u8207\u8005\u7684\u64AD\u5BA2\u64AD\u653E\u5668\u4E2D\u63D0\u4F9B\u7D66\u4ED6\u5011 \u3002\u66F4\u65B0\u8868\u55AE\uFF0C\u7136\u5F8C\u5728\u5E95\u90E8\u9078\u64C7\u9069\u7576\u7684\u6309\u9215\u3002 
+revise_directions=\u66F4\u65B0\u8868\u683C\uFF0C\u7136\u5F8C\u5728\u5E95\u90E8\u9078\u64C7\u9069\u7576\u7684\u6309\u9215\u3002 
